# Robotic_and_Computer_Vision_Projects_cpp_2

./: README.md
Kitti_Clouds_Viewer_and_Writer (leftCamRef)/: main.cpp
Kitti_Clouds_Viewer_and_Writer (lidarRef)/: CMakeLists.txt  main.cpp
Kitti_Convert_StereoImages_to_PointClouds/: CMakeLists.txt  main.cpp
Kitti_Odometry_Viewer/: CMakeLists.txt  main.cpp
Kitti_Save_Scales/: CMakeLists.txt  main.cpp
Kitti_Sttiching/: CMakeLists.txt  main.cpp
Plot_3D_Arrow/: CMakeLists.txt  main.cpp
Real_Time_Chessboard_Corners_Detection/: CMakeLists.txt  main.cpp
Real_Time_Chessboard_Corners_Detection_ZED/: CMakeLists.txt  main.cpp
Record_SVO_ZED+P3AT_Automatic/: CMakeLists.txt  main.cpp
Record_SVO_ZED+P3AT_Manual/: CMakeLists.txt  main.cpp
Record_SVO_from_ZED/: CMakeLists.txt  main.cpp
Registration_3D_using_Features/: CMakeLists.txt  main.cpp
Registration_Point_Clouds_using_SVD/: CMakeLists.txt  main.cpp
Registration_Point_Clouds_using_SVD/Data/: actual_cloud.pcd  ideal_cloud.pcd
Save_ZED(svo)_Images_and_Poses_in_Kitti_Format/: CMakeLists.txt  main.cpp
Save_ZED(svo)_Poses_in_TUM_Format/: CMakeLists.txt  main.cpp
Save_ZED_All_Data/: CMakeLists.txt  Save.cpp  main.cpp
Save_ZED_Data_Manual(keyboard)/: CMakeLists.txt  Save.cpp  main.cpp
Save_ZED_Data_Manual(keyboard)/include/: Save.hpp
Save_ZED_Processing_Times(Images_Depth_Clouds)/: CMakeLists.txt  main.cpp
Save_ZED_Undistorted_and_Distorted_Images/: CMakeLists.txt  Save.cpp  main.cpp
Save_ZED_Undistorted_and_Distorted_Images/include/: Save.hpp
Test_Kv1_using_OpenNI/: CMakeLists.txt  main.cpp
Test_Kv2_using_Libfreenect2/: CMakeLists.txt  main.cpp
Test_Kv2_using_OpenNI/: CMakeLists.txt  main.cpp
Visual_Monocular_SLAM_using_UcoSlam/: CMakeLists.txt  main.cpp
Visual_Monocular_SLAM_using_UcoSlam/Data/: mono_params.yml  poses.txt
Visual_Stereo_SLAM_using_UcoSlam/: CMakeLists.txt  main.cpp
Visual_Stereo_SLAM_using_UcoSlam/Data/: myparams.yml  poses_TUM.txt  stereo.yml
